<resources>
    <string name="app_name">AcmeSupermarket</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="btn_next">Next</string>

    <string name="prompt_credit_card_details">Credit Card Details</string>
    <string name="credit_card_type_visa">Visa</string>
    <string name="credit_card_type_master_card">Master Card</string>
    <string name="prompt_credit_card_number">Credit Card Number</string>
    <string name="prompt_credit_card_validity">Expiration Date (mm/yy)</string>
    <string name="action_register">Register</string>
    <string name="card_vcc">cvv</string>
    <string name="btn_submit">Submit</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_credentials">Invalid Credentials</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
